--- a/Plugins/BrainWeb/BrainWeb.uplugin
+++ b/Plugins/BrainWeb/BrainWeb.uplugin
@@ -2,7 +2,7 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "BrainWeb",
+	"FriendlyName": "InheritanceTree",
 	"Description": "",
 	"Category": "Other",
 	"CreatedBy": "",
